<resources>
    <string name="app_name">PrivateBrowser</string>
    <string name="vpn">Vpn</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="downloads">Downloads</string>
    <string name="search_or_type_web_address">Search or type web address</string>
    <string name="search">Search</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="action_forward">Action Forward</string>
    <string name="action_back">Action Back</string>

    <string name="log_in">LOGIN</string>
    <string name="log_out">LOGOUT</string>

    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>


    <string name="vpn_process_name" translatable="false">:my.custom.vpn.process.name</string>
    <string name="vpn_provider_authorities" translatable="false">com.anchorfree.hydrasdk.app.demo</string>


    <string name="optimal_server">OPTIMAL SERVER</string>
    <string name="unknown">UNKNOWN</string>


    <string name="traffic_stats">UL: %1$s, DL: %2$s </string>
    <string name="traffic_limit">%1$s of %2$s available</string>
    <string name="traffic_unlimited">UNLIMITED</string>

    <string name="current_server">CURRENT_SERVER</string>
    <string name="connecting">Connecting</string>
    <string name="paused">Paused</string>
    <string name="exit">Exit</string>
    <string name="browser">Browser</string>
    <string name="private_browser">Private Browser</string>
    <string name="add">Add</string>
    <string name="ul_0_kb_dl_0_kb">UL: 0 Kb, DL: 0 Kb</string>
    <string name="_0_mb_of_0_mb_available">0 Mb of 0 Mb available</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="add_to_bookmarks">Add To Bookmarks</string>

    <string name="default_region">DEFAULT REGION</string>
    <string name="www_google_com">www.google.com</string>
    <string name="incognito">Incognito</string>
    <string name="history">History</string>
    <string name="clear_browsing_data">Clear Browsing Data</string>
    <string name="clear_downloads">Clear Downloads</string>
    <string name="clear_bookmarks">Clear Bookmarks</string>
    <string name="normal_nbrowser">Normal\nBrowser</string>
    <string name="private_nbrowser">Private\nBrowser</string>
    <string name="dual_nbrowser">Dual\nBrowser</string>
    <string name="browser_n">Browser\n</string>

    <string name="language_prompt">Choose a language</string>
    <string name="select_language">Select Language</string>
    <string name="en">en</string>
    <string name="fr">fr</string>
    <string name="ru">ru</string>
    <string name="select">Select</string>
    <string name="select_a_language">Select a Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="es">es</string>
    <string name="url">Url:</string>
    <string name="now_you_can_browse_privately_and_other_people_who_use_this_device_won_t_see_your_activity_however_downloads_and_bookmarks_will_be_saved_learn_more_n_n_browser_won_t_save_the_following_information_n_your_browsing_history_n_cookies_and_site_data_n_information_entered_in_forms_n">Now you can browse privately, and other people who use this device won’t see your activity. However, downloads and bookmarks will be saved.\n\n  Browser won’t save the following information:  \nYour browsing history  \nCookies and site data  \nInformation entered in forms</string>
    <string name="you_ve_gone_incognito">You’ve gone incognito</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="urls">URL:</string>
    <string name="home">Home</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="exit_fullscreen">Exit Fullscreen</string>
    <string name="are_you_sure">Are you sure?</string>

    <string-array name="language_arrays">
        <item>en</item>
        <item>fr</item>
        <item>ru</item>
    </string-array>

<!--    TEST ADS -->

<!--    <string name="app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>-->
<!--    <string name="Banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>-->
<!--    <string name="Interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>-->
<!--    <string name="native_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>-->

<!--    ORIGNIAL ADS OLD-->

<!--    <string name="app_id" translatable="false">ca-app-pub-4438814465354836~9443076689</string>-->
<!--    <string name="Banner" translatable="false">ca-app-pub-4438814465354836/2877668334</string>-->
<!--    <string name="Interstitial" translatable="false">ca-app-pub-4438814465354836/3726009280</string>-->
<!--    <string name="native_id" translatable="false">ca-app-pub-4438814465354836/1955468909</string>-->

<!--    ORIGINAL ADS NEW-->

    <string name="app_id" translatable="false">ca-app-pub-8589419510089723~8689774933</string>
    <string name="Banner" translatable="false">ca-app-pub-8589419510089723/3561092400</string>
    <string name="Interstitial" translatable="false">ca-app-pub-8589419510089723/4970021777</string>
    <string name="native_id" translatable="false">ca-app-pub-8589419510089723/7308765723</string>

</resources>
