<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    &lt;!&ndash; to enable overflow menu with icons we have to do like below &ndash;&gt;-->
    <!--    <item-->
    <!--        android:id="@+id/action_more"-->
    <!--        android:icon="@drawable/ic_more_vert_black_24dp"-->
    <!--        android:title=""-->
    <!--        app:showAsAction="always">-->

    <!--        <menu>-->
    <!--    <item-->
    <!--        android:id="@+id/action_more"-->
    <!--        android:icon="@drawable/ic_more_vert_black_24dp"-->
    <!--        android:title=""-->
    <!--        app:showAsAction="always">-->

    <!--        <menu>-->

    <item
        android:id="@+id/bookmarks"
        android:icon="@drawable/menu_bookmark_new"
        android:title="@string/bookmarks"
        app:showAsAction="always" />

    <item
        android:id="@+id/a"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/home_new"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/o"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_vpn"
        android:icon="@drawable/menu_vpn_new"
        android:title="@string/vpn"
        app:showAsAction="always" />

    <item
        android:id="@+id/b"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />


    <item
        android:id="@+id/action_more"
        android:icon="@drawable/settings_menu_icon"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/incognito"
                android:icon="@drawable/menu_incognito_new"
                android:title="@string/incognito" />

            <item
                android:id="@+id/history"
                android:icon="@drawable/history_new"
                android:title="@string/history" />

            <item
                android:id="@+id/downloads"
                android:icon="@drawable/menu_downloads_new"
                android:title="@string/downloads" />

            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_clear_blue_24dp"
                android:title="@string/exit" />

        </menu>
    </item>
    <!--        </menu>-->
    <!--    </item>-->
    <!--        </menu>-->
    <!--    </item>-->
</menu>
